css/company.css
:root {
  --primary-text-color: #eee;
  --background-color: linear-gradient(
    0deg,
    rgb(6, 5, 21) 50%,
    rgb(86, 0, 167) 120%
  );
  --primary-profile-background-color: linear-gradient(
    0deg,
    rgb(186, 170, 207) 50%,
    rgb(114, 69, 124) 120%
  );
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  height: 100vh;
}

body {
  display: flex;
  flex-direction: column;
  font-family: "K2D-Regular";
  background: var(--background-color);
  margin: 0;
  min-height: 100%;
  overflow-y: scroll;
}

header {
  padding: 12px;
  color: var(--primary-text-color);
  border-bottom: 1px solid #fff;
}

main {
  height: 85vh;
  overflow-y: scroll;
  overflow-x: hidden;
}
section {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  min-width: 79vw;
}

.select {
  background: #141619;
  color: var(--primary-text-color);
  display: flex;
  justify-content: space-between;
  align-items: center;
  border: 1px solid #2a2f3b;
  border-radius: 5px;
  height: 3rem;
  width: 8rem;
  transition: background 0.3s;
}

.select-clicked {
  border: 1px solid #adbfea;
  box-shadow: 0 0 1rem #e99ffe;
}

.select:hover {
  background: #141619;
}

.filter-content {
  display: flex;
  padding: 10px;
  justify-content: space-around;
}

.caret {
  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 6px solid #fff;
  margin-right: 5px;
  transition: 0.3s;
}

.caret-rotate {
  transform: rotate(180deg);
}

.selected {
  margin-left: 10px;
}

.menu {
  list-style: none;
  padding: 0.2rem 0.5rem;
  background: #323741;
  border: 1px solid #363a43;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
  border-radius: 5px;
  color: #9fa5b5;
  position: absolute;
  top: 138px;
  width: 8rem;
  opacity: 0;
  display: none;
  transition: 0.2s;
  z-index: 110;
}

.menu li {
  padding: 0.7rem 0.5rem;
  margin: 0.3rem 0;
  border-radius: 5px;
  cursor: pointer;
}

.menu li:hover {
  background: #9c4bfe;
}

.active-filter {
  background: #46c3f0;
}

.menu-open {
  display: block;
  opacity: 1;
}

.profile {
  display: flex;
  flex-direction: column;
  align-items: center;
  background: var(--primary-profile-background-color);
  border-radius: 10px;
  box-shadow: 0 4px 8px 0 rgba(251, 246, 246, 0.354),
    0 6px 20px 0 rgba(252, 249, 249, 0.19);
  width: 40%;
  height: 12rem;
  margin: 12px;
  align-self: center;
}

.student-img {
  width: 100%;
  height: 60%;
  margin-top: 0px;
  border-radius: 10px 10px 0 0;
}

h4 {
  border-radius: 10px;
  width: 80%;
  text-align: center;
  margin: 10px 0 0 0;
}

p {
  margin: 2px 0 0 0;
}

.read-more {
  border: none;
  background: var(--background-color);
  color: var(--primary-text-color);
  border-radius: 5px;
  width: 5.2rem;
  height: 1.1rem;
  transform: translateY(30%);
}

.modal {
  color: var(--primary-text-color);
  position: fixed;
  top: 10%;
  transform: translate(-50%, -50%) scale(0);
  border-radius: 10px;
  z-index: 100;
  background: var(--primary-profile-background-color);
  box-shadow: 0 4px 8px 0 rgba(251, 246, 246, 0.354),
    0 6px 20px 0 rgba(252, 249, 249, 0.19);
  height: 75%;
  width: 500px;
  max-width: 80%;
}

.modal.active {
  transform: translate(0%, 0%) scale(1);
}
.modal-header {
  padding: 10px 15px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid black;
}

.modal-img {
  width: 50%;
  border-radius: 5px;
  margin-right: 25px;
}

.modal-header .title {
  font-size: 1.25rem;
  font-weight: bold;
}

.modal-header .close-button {
  cursor: pointer;
  border: none;
  outline: none;
  background: none;
  font-size: 1.75rem;
  font-weight: bold;
  transform: translate(20%, -100%);
}

.modal-body {
  padding: 10px 15px;
}

#overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(23, 22, 23, 0.641);
  pointer-events: none;
}

#overlay.active {
  opacity: 1;
  pointer-events: all;
}

button a {
  text-decoration: none;
  color: var(--primary-text-color);
  padding: 1.2rem;
}

@media screen and (min-width: 800px) {
  .profile {
    width: 30%;
    margin: 10px;
    flex-wrap: wrap;
  }
}

@media screen and (min-width: 991px){
    
    main {
        display: flex;    
    }
    .filter-content {
        flex-direction: column;
        width: 30rem;
    
    }


    h4, 
    p, 
    .read-more {
        margin: 4px;
        transform: translateY(-4px);
    }
    

    .profile {
        width: 30%;
        height: 25%;
        margin: 10px;
        flex-wrap: wrap;
    }
    .select {
        width: 15rem;
        margin: 24px 0 0 10px;
    }
    .menu {
        position: static ;
        width: 15rem;
        margin: 12px 0 0 10px;
    }

  .modal {
    width: 80%;
    left: 10%;
  }

  .filter-content {
    justify-content: unset;
  }
  .modal-header .close-button {
    font-size: 4rem;
    margin: 60px 20px 150px 0;
  }
  .modal-header .title {
    font-size: 3.2rem;
    color: black;
  }
  .modal-body p {
    font-size: 1.1rem;
    color: black;
  }
  .modal-body h3 {
    color: black;
    font-size: 2rem;
    margin-bottom: 20px;
  }
}

